[gd_scene load_steps=6 format=2]

[ext_resource path="res://Lib/UI/Themes/Kenney Pixel.ttf" type="FontFile" id=1]
[ext_resource path="res://Lib/UI/ability_item.gd" type="Script" id=2]
[ext_resource path="res://Lib/UI/Themes/main_theme.tres" type="Theme" id=3]

[sub_resource type="FontFile" id=4]
size = 12
font_data = ExtResource( 1 )

[sub_resource type="FontFile" id=3]
size = 12
font_data = ExtResource( 1 )

[node name="AbilityItem" type="HBoxContainer"]
offset_right = 280.0
offset_bottom = 25.0
theme = ExtResource( 3 )
script = ExtResource( 2 )

[node name="AbilityDetails" type="VBoxContainer" parent="."]
offset_right = 45.0
offset_bottom = 26.0

[node name="AbilityName" type="Label" parent="AbilityDetails"]
offset_right = 45.0
offset_bottom = 12.0
custom_minimum_size = Vector2( 45, 10 )
text = "Attack"
uppercase = true

[node name="AbilityCost" type="Label" parent="AbilityDetails"]
offset_top = 16.0
offset_right = 45.0
offset_bottom = 26.0
custom_fonts/font = SubResource( 4 )
text = "Cost: "

[node name="AbilityDescription" type="RichTextLabel" parent="."]
offset_left = 49.0
offset_right = 280.0
offset_bottom = 26.0
custom_minimum_size = Vector2( 80, 25 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
text = "Use [color=red]warrior.attack()[/color] to attack anything in the space next to you."
text = "Use warrior.attack() to attack anything in the space next to you."
